[project]
name = "strong-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "plotly>=5.24.1",
    "polars>=1.18.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
]

[tool.uv.workspace]
members = ["plotly-cal"]
